# realtime-novel

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  verify.py  verify_mb.py
.realtime-novel/: conventions.md
backend/: __init__.py  __main__.py
backend/adapters/: __init__.py  llm_adapter.py  llm_router.py  seed_weight.py  streaming.py  types.py
backend/agent/: agents_README.md  context_builder.py  executor.py  exploration.py  intent_recognizer.py  nodes.py  novel_steward.py  novel_writer.py  onboarding_agent.py  onboarding_controller.py  onboarding_hooks.py  prompts.py  specialists.py  state.py  state_graph.py  state_graph_stub.py  style_inference.py  world_tree_manager.py
backend/api/: action_routes.py  app.py  chapter_routes.py  onboarding_routes.py  project_routes.py  system_routes.py  ws_manager.py
backend/cli/: __init__.py  interactive.py  main.py.cli-deprecated
backend/config/: __init__.py  agents.json  config_loader.py
backend/core/: __init__.py  (+3 more)
docs/: 03-product-schemas.md  05-roadmap-v03.md  06-product-skeleton-roadmap.md  README.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
realtime_novel/: __init__.py  __main__.py  _seed_demo.py  chapter_generator.py  io.py  llm.py  project.py  three_layer_prompt.py  world_tree.py
research/: scenes-round3.md
scripts/: e2e_integration_test.py  export_openapi.py  start.sh  stop.sh
tests/: README.md  e2e_integration_test.py  test_v003_agent_core.py  test_v003_agent_name_logging.py  test_v003_agent_tools.py  test_v003_api_routes.py  test_v003_batch_tools.py  test_v003_context_builder.py  test_v003_context_v094.py  test_v003_db_refactor.py  test_v003_migration_v003.py  test_v003_onboarding_pipeline.py  test_v003_persistence_layer.py  test_v003_prompts_docs_tests.py  test_v003_service_layer.py  test_v003_validation.py  test_v003_volume_tool_v095.py  test_v004_volume_summary.py
(+301 files in other folders)
